<resources>
    <string name="app_name">chihu</string>

    <string name="register_user">注册用户</string>
    <string name="register">注册</string>
    <string name="register_user_finish">完成</string>
    <string name="register_user_cancel">取消</string>
    <string name="register_user_username">用户名</string>
    <string name="register_user_password">密码</string>
    <string name="register_user_email">邮箱</string>

    <string name="user_login_title">登录</string>

    <string name="home_page_title">首页</string>

    <string name="cart_is_empty">购物车空空如也</string>
    <string name="make_order">结算</string>

</resources>
